# internal/data/entities/profile.go
@@ -11,6 +11,7 @@ type ProfileEntity struct {
 	ID uuid.UUID
 	Email string
 	Username string
+	Phone_number string
 	Password string
 	Name string
 	Birthday time.Time
@@ -19,12 +20,13 @@ type ProfileEntity struct {
 	Latitude float32
 }
 
-func (ProfileEntity) New(id uuid.UUID, email, name, username, password string, birthday time.Time, gender consts.Gender, long float32, lat float32) ProfileEntity {
+func (ProfileEntity) New(id uuid.UUID, email, name, username, password, phone_number string, birthday time.Time, gender consts.Gender, long float32, lat float32) ProfileEntity {
 
 	return ProfileEntity{
 		ID: id,
 		Email: email,
 		Name: name, 
+		Phone_number: phone_number,
 		Birthday: birthday,
 		Password: password,
 		Gender: gender,
