# internal/presentation/api/http/dtos/request/addPreferences.go
@@ -8,6 +8,6 @@ import (
 
 type AddPreferencesRequest struct {
 	ID uuid.UUID `json:"id" binding:"required"`
-	Birthday time.Time `json:"birthday" binding:"required"`
-	Raduis *int16 `json:"radius" binding:"omitempty"`
+	Birthday time.Time `json:"birthday"`
+	Raduis int16 `json:"radius"`
 }
