# internal/presentation/api/http/dtos/response/addPreferences.go
@@ -1,0 +1,8 @@
+package response
+
+import "time"
+
+type AddPreferencesResponse struct {
+	Birthday *time.Time `json:"birthday,omitempty"`
+	Raduis   *int16     `json:"radius,omitempty"`
+}
